# django-project

./: README.md  auth.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  forms.py  funcs.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill_db.py
catalog/migrations/: 0001_initial.py  0002_alter_category_options_alter_product_options_and_more.py  0002_product_manufactured_at.py  0003_version.py  0004_product_user.py  0005_alter_product_user.py  0006_alter_product_options_product_is_published.py  0007_alter_product_options.py
catalog/templates/catalog/: base.html  category_list.html  contacts.html  home.html  main.html  main_menu.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templatetags/: media.py
config/: .env-demo  settings.py  urls.py
fixtures/: blog_data.json  blogs.json  catalog_data.json  categories.json  products.json  versions.json
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_token.py
users/templates/users/: login.html  reset-password-success.html  reset-password.html  user_form.html
