[tool.poetry]
name = "django-project"
version = "0.1.0"
description = ""
authors = ["fivtin <fivtin@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.9"
pillow = "^10.3.0"
ipython = "^8.24.0"
pytils = "^0.4.1"
django = "4.2"
python-dotenv = "^1.0.1"
redis = "^5.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
